Update Display Forms shortcode to not wrap in <code> tags
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@892028 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder-admin.css
+++ b/css/visual-form-builder-admin.css
@@ -602,6 +602,14 @@ strong .vfb-meta-entries-total span {
 	height: 100%;
 }
 
+#vfb_form_media_button_tip input {
+	width: 100%;
+	border: 0;
+	padding: 6px;
+	font-family: Consolas, Monaco, monospace;
+	font-size: 12px;
+}
+
 /* !Form Editor Columns - One Column */
 @media only screen and (max-width: 799px) {
 	#vfb-form-builder-frame .vfb-postbox-container {
