Update CSS to use !important to prevent themes from conflicting with certain rules
git-svn-id: https://plugins.svn.wordpress.org/visual-form-builder/trunk@892033 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/visual-form-builder.css
+++ b/css/visual-form-builder.css
@@ -10,12 +10,12 @@ form.visual-form-builder{
 }
 
 form.visual-form-builder li{
-	margin: 0;
-	width:auto !important;
-	background: none;
-	list-style: none;
-	list-style-type: none;
-	list-style-image: none;
+	margin: 0 !important;
+	width: auto !important;
+	background: none !important;
+	list-style: none !important;
+	list-style-type: none !important;
+	list-style-image: none !important;
 	clear: both;
 }
 
@@ -51,22 +51,22 @@ form.visual-form-builder li{
 .entry-content .visual-form-builder ol,
 .comment-content .visual-form-builder ol,
 .mu_register .visual-form-builder ol {
-	margin:0 14px;
-	padding:0;
-	background: none;
-	list-style: none;
-	list-style-type: none;
-	list-style-image: none;
-	font-size:13px;
+	margin: 0 14px !important;
+	padding: 0 !important;
+	background: none !important;
+	list-style: none !important;
+	list-style-type: none !important;
+	list-style-image: none !important;
+	font-size: 13px;
 	line-height: inherit;
 }
 
 	.visual-form-builder ul li {
-		margin: 0;
-		background: none;
-		list-style: none;
-		list-style-type: none;
-		list-style-image: none;
+		margin: 0 !important;
+		background: none !important;
+		list-style: none !important;
+		list-style-type: none !important;
+		list-style-image: none !important;
 	}
 
 		.visual-form-builder ul li:before {
@@ -78,13 +78,13 @@ form.visual-form-builder li{
 	.comment-content .visual-form-builder li,
 	.mu_register .visual-form-builder li {
 		clear: both;
-		margin: 0;
-		padding: 6px 1% 9px;
+		margin: 0 !important;
+		padding: 6px 1% 9px !important;
 		width: 64%;
-		background: none;
-		list-style: none;
-		list-style-type: none;
-		list-style-image: none;
+		background: none !important;
+		list-style: none !important;
+		list-style-type: none !important;
+		list-style-image: none !important;
 	}
 
 		.visual-form-builder li:before,
@@ -130,7 +130,7 @@ span.vfb-full select{
 .visual-form-builder span.vfb-left input,
 .visual-form-builder span.vfb-left input[type="text"],
 .visual-form-builder span.vfb-left select{
-	width:100%;
+	width:100% !important;
 }
 
 /* !Time Field */
@@ -170,8 +170,8 @@ span.vfb-full select{
 }
 
 	.visual-form-builder .vfb-legend h3 {
-		margin:0;
-		padding:0;
+		margin: 0 !important;
+		padding: 0 !important;
 		font-size:20px;
 		line-height: 2.0em;
 	}
@@ -244,12 +244,12 @@ textarea.vfb-textarea {
 	background: none repeat scroll 0 0 #FAFAFA;
 
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	-webkit-transition: border linear .2s, box-shadow linear .2s;
-	-moz-transition: border linear .2s, box-shadow linear .2s;
-	-o-transition: border linear .2s, box-shadow linear .2s;
-	transition: border linear .2s, box-shadow linear .2s;
+	   -moz-transition: border linear .2s, box-shadow linear .2s;
+	     -o-transition: border linear .2s, box-shadow linear .2s;
+	        transition: border linear .2s, box-shadow linear .2s;
 }
 
 	input.vfb-text:focus,
@@ -264,8 +264,8 @@ textarea.vfb-textarea {
 		border-color: rgba(82, 168, 236, 0.8);
 
 		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
-		-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
-		box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+		   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+		        box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
 	}
 
 	input.vfb-text.vfb-error:focus,
@@ -277,8 +277,8 @@ textarea.vfb-textarea {
 		border-color: rgba(238,83,83,0.8);
 
 		-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
-		-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
-		box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
+		   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
+		        box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(238,83,83,.6);
 	}
 
 input.vfb-text,
@@ -507,8 +507,8 @@ p#form_success,
 }
 
 	.visual-form-builder .vfb-section-div h4 {
-		margin: 0;
-		padding: 0;
+		margin: 0 !important;
+		padding: 0 !important;
 		border-bottom:1px solid #BABABA;
 		font-size:16px;
 		line-height: inherit;
